test/spec_vectors/select/fail/module_17.wat
(module (func $type-2nd-operand-empty (i32.const 0) (select) (drop)))